[package]
name = "frosty_grass"
description = "A bevy plugin for rendering grass on 3D meshes using GPU instancing"
version = "0.0.1"
exclude = ["./assets", "./images"]
keywords = ["bevy", "gamedev", "grass", "rendering", "instancing"]
repository = "https://github.com/DavidHospital/FrostyGrass"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "bevy_gltf"] }
bytemuck = "1.14.0"
wgpu = "0.18.0"
fastrand = "2.0.1"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
bevy = { version = "0.12.1", default-features = false, features = ["bevy_winit", "x11", "ktx2", "zstd", "tonemapping_luts"] }
noise = "0.8.2"

[[example]]
name = "grass_field"
path = "examples/grass_field.rs"

